<resources>
    <string name="app_name">NewsBucket</string>
    <string name="title_activity_channels_display">ChannelsDisplayActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Satish Kumar</string>
    <string name="nav_header_subtitle">Welcome, </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="abc_news">ABC News</string>
    <string name="bbc_news">BBC News</string>
    <string name="bbc_sports">BBC Sports</string>
    <string name="cbc_news">CBC News</string>
    <string name="cnn_news">CNN News</string>
    <string name="espn">ESPN</string>
    <string name="national_geographic">National Geographic</string>
    <string name="google_news_india">Google News India</string>
    <string name="hacker_news">Hacker News</string>
    <string name="financial_times">Financial Times</string>
    <string name="entertainment_weekly">Entertainment Weekly</string>
    <string name="the_hindu">The Hindu</string>
    <string name="the_newyork_times">The NewYork Times</string>
    <string name="the_times_of_india">The Times of India</string>
    <string name="time">Time</string>
    <string name="business_insider_uk">Business Insider</string>
    <string name="abc_news_key">abc-news</string>
    <string name="bbc_news_key">bbc-news</string>
    <string name="bbc_sports_key">bbc-sport</string>
    <string name="cbc_news_key">cbc-news</string>
    <string name="cnn_news_key">cnn</string>
    <string name="business_insider_key">business-insider</string>
    <string name="espn_key">espn</string>
    <string name="google_news_india_key">google-news-in</string>
    <string name="hacker_news_key">hacker-news</string>
    <string name="national_geographic_key">national-geographic</string>
    <string name="the_hindu_key">the-hindu</string>
    <string name="the_newyork_times_key">the-new-york-times</string>
    <string name="the_times_of_india_key">the-times-of-india</string>
    <string name="time_key">time</string>
    <string name="financial_times_key">financial-times</string>
    <string name="entertainment_weekly_key">entertainment-weekly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_image">favorite Image</string>
    <string name="published_at">Published at</string>
    <string name="imageview_in_full_description">Imageview in full description</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="show_more">Read more...</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favorites">Favorites</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_an_alarm">Set an Alarm</string>
    <string name="alarm_text">Set the Alarm to Notify You to go through the News</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="welcome">Welcome to News Bucket</string>
</resources>
