<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/normal_padding"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_edge_radius"
    tools:context=".AlarmActivity">
    <RelativeLayout
        android:layout_marginTop="@dimen/normal_padding"
        android:padding="@dimen/normal_padding"
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:text="@string/alarm_text"
            android:textSize="@dimen/normal_text_size"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/textview_showing_text_to_set_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button

            android:onClick="cancelAlarm"
            android:layout_alignParentStart="true"
            android:text="@string/cancel_alarm"
            android:layout_below="@id/textview_showing_text_to_set_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="setAlarm"
            android:text="@string/set_alarm"
            android:layout_below="@id/textview_showing_text_to_set_alarm"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.v7.widget.CardView>