<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/normal_padding"
    tools:context=".FullDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_marginTop="@dimen/normal_padding"
        android:id="@+id/full_detail_imageView"
        android:contentDescription="@string/imageview_in_full_description"
        android:layout_width="@dimen/full_detail_image_width"
        android:layout_height="@dimen/full_detail_image_height"
        android:src="@drawable/newsbucketnullimage"/>

        <ImageView
            android:layout_marginTop="@dimen/full_detail_fav_image_height"
            android:id="@+id/full_detail_fav_image"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_height="@dimen/full_detail_fav_image_height"
            android:layout_marginStart="@dimen/full_detail_image_width"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/imageview_in_full_description"
            android:focusable="true"
            android:src="@drawable/ic_favorite_border_black_24dp" />

    <LinearLayout
        android:layout_below="@id/full_detail_imageView"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title_label"
        android:textSize="@dimen/head_text_size"
        android:textStyle="bold"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="@dimen/normal_padding"
        android:textSize="@dimen/normal_text_size"
        android:id="@+id/full_detail_title_tv"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/description_label"
        android:textSize="@dimen/head_text_size"
        android:textStyle="bold"
        android:text="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:padding="@dimen/normal_padding"
        android:id="@+id/full_detail_description_tv"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />
    </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/item_view"
        android:padding="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:onClick="stopSpeaking"
            android:src="@drawable/ic_volume_off_black_24dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_in_full_description"
            android:layout_gravity="start"
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/speak_button_height" />
        <Button
            android:onClick="showinBrowser"
            android:layout_weight="2"
            android:textSize="15sp"
            android:text="@string/show_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:onClick="speakNow"
            android:src="@drawable/ic_volume_up_black_24dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_in_full_description"
            android:layout_gravity="end"
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/speak_button_height" />

    </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>


</ScrollView>